--- a/notebooks/word2vec_gensim.ipynb
+++ b/notebooks/word2vec_gensim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,7 @@
     "import string\n",
     "import gensim\n",
     "from gensim.models import Word2Vec\n",
+    "from gensim.models import FastText\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.manifold import TSNE\n",
     "\n",
@@ -22,34 +23,66 @@
     "import os\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "from dotenv import load_dotenv\n",
+    "from pathlib import Path\n",
+    "\n",
+    "env_path = '/data/dssg-disinfo/.env'\n",
+    "load_dotenv(env_path, override=True)\n",
+    "# settings.py\n",
+    "PATH = os.getenv(\"PATH\")\n",
+    "\n",
+    "# nltk.download('punkt') ## Run this once before running the code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "#read and concatanate negative and positive articles\n",
-    "df = pd.read_csv('/data/dssg-disinfo/articles_v3.csv')\n",
+    "#df = pd.read_csv('/data/dssg-disinfo/articles_v3.csv')\n",
     "\n",
     "# df = df[df['label'] == 1]\n",
-    "\n",
     "# Remove the special characters\n",
-    "df['article_text'] = [article.replace('\\n', ' ') for article in df.article_text]\n",
-    "df['article_text'] = [article.replace('[^a-zA-Z\\d\\s:]', ' ') for article in df.article_text]\n",
+    "# If there are any characters \\n or special characters present uncomment this\n",
+    "#df['article_text'] = [article.replace('\\n', ' ') for article in df.article_text]\n",
+    "#df['article_text'] = [article.replace('[^a-zA-Z\\d\\s:]', ' ') for article in df.article_text]\n",
+    "#df['article_text'] = df['article_text'].str.lower()\n",
     "\n",
-    "df['article_text'] = df['article_text'].str.lower()\n",
+    "#df_articles = df['article_text'].tolist()\n",
     "\n",
-    "df_articles = df['article_text'].tolist()"
+    "### Using UW Data --->\n",
+    "\n",
+    "df = pd.read_csv(os.path.join(PATH,'uw_data1.csv'))\n",
+    "df_articles = df['article'].tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_articles' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-5cca0faaa443>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mtokenized_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdf_articles\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mtokenized_word\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mword_tokenize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mtokenized_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtokenized_word\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df_articles' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#tokenizing words in each article to create list of lists\n",
     "tokenized_list = []\n",
@@ -57,6 +90,94 @@
     "for item in df_articles:\n",
     "    tokenized_word = word_tokenize(item)\n",
     "    tokenized_list.append(tokenized_word)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## FastText"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_fasttext=FastText(tokenized_list, min_count=10, size= 300, window=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FastText(vocab=63602, size=300, alpha=0.025)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model_fasttext)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the model\n",
+    "filename = '/data/dssg-disinfo/word-embeddings/fasttext_300d_embeddings.wv'\n",
+    "model_fasttext.save(filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/richa/.conda/envs/dssg/lib/python3.7/site-packages/ipykernel_launcher.py:1: DeprecationWarning: Call to deprecated `most_similar` (Method will be removed in 4.0.0, use self.wv.most_similar() instead).\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('coronaviruss', 0.9769521951675415),\n",
+       " ('coronavirus-19', 0.9733467102050781),\n",
+       " (\"'coronavirus\", 0.9624966979026794),\n",
+       " ('non-coronavirus', 0.9508402943611145),\n",
+       " ('coronavirus-like', 0.9353148341178894),\n",
+       " ('corona-virus', 0.9322391748428345),\n",
+       " ('pre-coronavirus', 0.9270610809326172),\n",
+       " ('coronavirus-free', 0.9242501854896545),\n",
+       " ('coronvirus', 0.9129698872566223),\n",
+       " ('anti-coronavirus', 0.910959780216217)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_fasttext.most_similar('coronavirus')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Word2Vec"
    ]
   },
   {
@@ -147,7 +268,11 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -256,9 +381,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hope",
+   "display_name": "dssg",
    "language": "python",
-   "name": "hope"
+   "name": "dssg"
   },
   "language_info": {
    "codemirror_mode": {
