Commit my model before pulling

--- a/notebooks/word2vec_gensim.ipynb
+++ b/notebooks/word2vec_gensim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,23 +61,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Word2Vec(tokenized_list, min_count=10,size= 200,workers=3, window =3, sg = 1)"
+    "model = Word2Vec(tokenized_list, min_count=10,size= 300,workers=3, window = 10, sg = 1)\n",
+    "filename = '/data/dssg-disinfo/gensim_embeddings.wv'\n",
+    "model.save(filename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Word2Vec(vocab=53903, size=200, alpha=0.025)\n"
+      "Word2Vec(vocab=53903, size=300, alpha=0.025)\n"
      ]
     }
    ],
@@ -87,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -101,19 +103,19 @@
     {
      "data": {
       "text/plain": [
-       "[('disease', 0.7281298041343689),\n",
-       " ('infection', 0.6743493676185608),\n",
-       " ('covid-19', 0.6713500618934631),\n",
-       " ('coronavirus', 0.663510262966156),\n",
-       " ('coronvirus', 0.6041020154953003),\n",
-       " ('illness', 0.5998390316963196),\n",
-       " ('re-infection', 0.5990270376205444),\n",
-       " ('reinfection', 0.5954970121383667),\n",
-       " ('presymptomatic', 0.5866572856903076),\n",
-       " ('coroanvirus', 0.5845031142234802)]"
+       "[('covid-19', 0.6790992021560669),\n",
+       " ('disease', 0.6640979051589966),\n",
+       " ('infection', 0.6476781368255615),\n",
+       " ('coronavirus', 0.629718542098999),\n",
+       " ('infected', 0.5625609755516052),\n",
+       " ('infections', 0.5555858612060547),\n",
+       " ('viruss', 0.5344881415367126),\n",
+       " ('asymptomatically', 0.533292829990387),\n",
+       " ('illness', 0.5321757793426514),\n",
+       " ('presymptomatic', 0.5310831665992737)]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
