commented code for GloVe- is incomplete

--- a/notebooks/word2vec_gensim.ipynb
+++ b/notebooks/word2vec_gensim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,8 @@
     "from gensim.models import FastText\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.manifold import TSNE\n",
+    "import spacy\n",
+    "from spacy.tokenizer import Tokenizer\n",
     "\n",
     "import glob\n",
     "import os\n",
@@ -31,13 +33,14 @@
     "load_dotenv(env_path, override=True)\n",
     "# settings.py\n",
     "PATH = os.getenv(\"PATH\")\n",
-    "\n",
+    "nlp = spacy.load('en_vectors_web_lg')\n",
+    "tokenizer = Tokenizer(nlp.vocab)\n",
     "# nltk.download('punkt') ## Run this once before running the code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,28 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df_articles' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-5cca0faaa443>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mtokenized_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdf_articles\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mtokenized_word\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mword_tokenize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mtokenized_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtokenized_word\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'df_articles' is not defined"
-     ]
-    }
-   ],
    "source": [
     "#tokenizing words in each article to create list of lists\n",
     "tokenized_list = []\n",
@@ -91,6 +75,44 @@
     "    tokenized_word = word_tokenize(item)\n",
     "    tokenized_list.append(tokenized_word)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GloVe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#importing the glove library\n",
+    "#from glove import Corpus, Glove\n",
+    "\n",
+    "# creating a corpus object\n",
+    "#corpus = Corpus() \n",
+    "\n",
+    "#training the corpus to generate the co occurence matrix which is used in GloVe\n",
+    "#corpus.fit(tokenized_list, window=10)\n",
+    "\n",
+    "#creating a Glove object which will use the matrix created in the above lines to create embeddings\n",
+    "#We can set the learning rate as it uses Gradient Descent and number of components\n",
+    "#glove = Glove(no_components=5, learning_rate=0.05)\n",
+    " \n",
+    "#glove.fit(corpus.matrix, epochs=30, no_threads=4, verbose=True)\n",
+    "#glove.add_dictionary(corpus.dictionary)\n",
+    "#glove.save('glove.model')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -269,7 +291,9 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
+    "collapsed": true,
     "jupyter": {
+     "outputs_hidden": true,
      "source_hidden": true
     }
    },
