--- a/AUTHORS
+++ b/AUTHORS
@@ -2,9 +2,9 @@ Authors for the purpose of copyright ownership:
 
 Noah Benson, University of Washington
 Maggie Engler, Global Disinformation Index
-Richa Gupta
-George Hope Chidziwisano
-Kseniya Husak
+Richa Gupta, Columbia University
+George Hope Chidziwisano, Michigan State University
+Kseniya Husak, University of Michigan
 Vaughn Iverson, University of Washington
-Maya Luetke
+Maya Luetke, Indiana University
 Lucas Wright, Global Disinformation Index
